Agregado de foto de fondo

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
           </div>
       
   </header>
+  <div class="fondo-img">
+   <img src="img/fondo.jpg" alt="Foto de Buenos Aires" width="1500px" >
+  </div>
+ <br>
+ 
 
 
 
