Agregado de Formulario

--- a/index.html
+++ b/index.html
@@ -130,6 +130,54 @@
                 </div>
                 </div>
                 </div>
+                <div class="container-fluid me-0 ms-0  p-0" ></div>
+                <br>
+                <br>
+<div class="text-center"> 
+  <h6>CONVIÈRTETE EN UN</h6> 
+  <h3>ORADOR</h3>
+</div>
+<BR></BR>
+<div class="container-fluid me-0 ms-0  p-0" ></div>
+<div class="text-center"> 
+  <h6>Aprende como orador para dar    una Cuèntanos de què quieres hablar!</h6> 
+  
+</div>
+
+<div class="container mt-3">
+    <div class="row">
+        <div class="col">
+            <input type="text" class="form-control" &emsp placeholder="Nombre" name="email">
+        </div>
+        <div class="col">
+            <input type="password" class="form-control" placeholder="Apellido" name="pswd">
+        </div>
+    </div>
+</div>
+<br>
+<div class="container mt-3">
+    <div class="row">
+        <div class="col">
+            <form action="/action_page.php">
+            <div class="mb-3 mt-3">
+                <textarea class="form-control" rows="5" id="comment" name="text">Sobre què quieres hablar?</textarea>
+                <label for="comment">Recuerda incluir un tìtulo para tu charla</label>
+            </div>
+        </div>
+    </div>
+</div>    
+
+<div class="container mt-3">
+    <div class="nav justify-content-center">
+        <button type="submit" class="btn btn-success mb-4 fs-5 btn-submit">Enviar</button>
+    </div>
+  
+</div>
+</form>
+</div>
+</div>
+
+
                 
                 </div>
                 
