Agregado de Logo sin fondo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container-fluid me-0 ms-0  p-0" >
             <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
                 <a class="navbar-brand"></a>
-                <img src="img/codoacodo.jpg" alt="logo" class="text-aline-left" width="75px" height="50px">
+                <img src="img/codoacodo.png" alt="logo" class="text-aline-left" width="75px" height="50px">
                 <a class="nav-link h5 text-light" href="#" class="h4"> &emsp; &emsp; Conf Bs As</a>
               <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
                <div class="container-fluid">
