--- a/index.html
+++ b/index.html
@@ -46,8 +46,42 @@
           </div>
       
   </header>
+
+
+
+
+
+
+
+  
   <div class="fondo-img">
    <img src="img/fondo.jpg" alt="Foto de Buenos Aires" width="1500px" >
+  
+   <div class="card-img-overlay">
+    <div class="container">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+        <h4 class="img-title text-light">Conf Bs As</h4>
+        <p class="card-text text-light">Buenos Aires llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro de Internet. Ven a conocer a miembros del evento, a otros estudiantes de Coco a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
+        <a href="#" class="btn btn-outline-light text-light">Quiero ser orador</a>
+        <a href="#" class="btn btn-success">Comprar tickets</a>
+      </div>
+    </div>
+  </div>
+  
+
+
+
   </div>
  <br>
  <div class="text-center"> 
