--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 <br>
 <br>
 <br>
-        <h4 class="img-title text-light">Conf Bs As</h4>
-        <p class="card-text text-light">Buenos Aires llega por primera vez a Argentina. Un evento para compartir <br>
+        <h2 class="img-title text-light">Conf Bs As</h2>
+        <h5><p class="card-text text-light">Buenos Aires llega por primera vez a Argentina. Un evento para compartir <br>
            con nuestra comunidad el conocimiento y experiencia de los expertos <br>
             que están creando el futuro de Internet. Ven a conocer a miembros del <br>
-             evento, a otros estudiantes de Coco a Codo y los oradores de primer <br> nivel que tenemos para ti. Te esperamos!</p>
+             evento, a otros estudiantes de Coco a Codo y los oradores de primer <br> nivel que tenemos para ti. Te esperamos!</h5> </p> 
         <a href="#" class="btn btn-outline-light text-light">Quiero ser orador</a>
         <a href="#" class="btn btn-success">Comprar tickets</a>
       </div>
